fix: changes to landing page cover image and removed code example on landing (#121)
* fix: changes to landing page

* small change in byline

* fix: last blog card took full row and messed up sizing - fixed

* fix: blog post images can now be expanded on click for visibility

* fix: prism js import was in wrong component

* updated web tag

---------

--- a/apps/web/src/pages/BlogPostPage/BlogPostPage.css
+++ b/apps/web/src/pages/BlogPostPage/BlogPostPage.css
@@ -46,7 +46,6 @@ article li {
 
 .rt-Box p {
   color: var(--gray-8) !important;
-  font-style: italic;
 }
 
 .blog-post-title {
