--- a/apps/web/src/pages/Home/Home.css
+++ b/apps/web/src/pages/Home/Home.css
@@ -42,6 +42,10 @@ button:focus-visible {
   backdrop-filter: blur(8px);
 }
 
+.hero-content-container-main {
+  padding-bottom: 128px;
+}
+
 /* .temp-banner {
   background-color: #ffffff6f;
   padding: 8px 16px;
